fix: adjust position of edit post pen for better alignment

--- a/styles.css
+++ b/styles.css
@@ -1141,7 +1141,7 @@ select:hover {
 }
 #edit-post-pen {
     position: absolute;
-    top: 10px;
+    top: 15px;
     right: 20px;
     font-size: 1rem;
 }
@@ -1687,7 +1687,7 @@ form textarea {
     #edit-post-pen {
         position: absolute;
         top: 10px;
-        right: 100px;
+        right: 70px;
         font-size: 1rem;
     }
 }
